--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ coverage
 *.lcov
 
 # nyc test coverage
-.nyc_output
+.nyc_coverage
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
