--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,10 @@
 sonar.projectKey=ramuspedro_continuos-integration-fullcycle
+sonar.organization=continuos-integration-fullcycle
 sonar.projectName=continuos-integration-fullcycle
 sonar.projectVersion=1.0
 sonar.sources=src
+sonar.exclusions=**/*_test.js
 sonar.sourceEncoding=UTF-8
-sonar.tests=code-tests
+sonar.tests=src
+sonar.test.inclusions=**/*_test.js
+sonar.reportPaths=nyc_coverage/lcov.info
