--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.exclusions=**/*_test.js
 sonar.sourceEncoding=UTF-8
 sonar.tests=src
 sonar.test.inclusions=**/*_test.js
-sonar.reportPaths=nyc_coverage/lcov.info
+sonar.reportPaths=.nyc_coverage/lcov.info
