--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=continuos-integration-fullcycle
 sonar.projectName=continuos-integration-fullcycle
 sonar.projectVersion=1.0
 sonar.sources=src
-sonar.exclusions=**/*_test.js
+# sonar.exclusions=**/*_test.js
 sonar.sourceEncoding=UTF-8
 sonar.tests=src
 sonar.test.inclusions=**/*_test.js
