--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,5 +6,5 @@ sonar.sources=src
 # sonar.exclusions=**/*_test.js
 sonar.sourceEncoding=UTF-8
 sonar.tests=src
-sonar.test.inclusions=**/*_test.js
+sonar.test.inclusions=src/*_test.js
 sonar.javascript.lcov.reportPaths=.nyc_coverage/lcov.info
