--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=ramuspedro_continuos-integration-fullcycle
+sonar.projectKey=continuos-integration-fullcycle
 sonar.organization=continuos-integration-fullcycle
 sonar.projectName=continuos-integration-fullcycle
 sonar.projectVersion=1.0
@@ -8,3 +8,5 @@ sonar.sourceEncoding=UTF-8
 sonar.tests=src
 sonar.test.inclusions=src/*_test.js
 sonar.javascript.lcov.reportPaths=.nyc_coverage/lcov.info
+sonar.javascript.coveragePlugin=lcov
+# sonar.login=357f3ab60d4a60d366e2a8376f0098f3dad49abb
