--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ coverage
 # nyc test coverage
 .nyc_output
 .nyc_coverage
+.scannerwork
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
