--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,10 @@
 sonar.projectKey=ramuspedro_continuos-integration-fullcycle
 sonar.organization=continuos-integration-fullcycle
 sonar.projectName=continuos-integration-fullcycle
+sonar.host.url=https://sonarcloud.io
 sonar.projectVersion=1.0
 sonar.sources=src
+sonar.language=js
 # sonar.exclusions=**/*_test.js
 sonar.sourceEncoding=UTF-8
 sonar.tests=src
