--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
           node-version: 14
       - run: npm ci
       - run: npm test
+      - run: ls -al
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
