--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,12 +3,12 @@ sonar.organization=continuos-integration-fullcycle
 sonar.projectName=continuos-integration-fullcycle
 sonar.host.url=https://sonarcloud.io
 sonar.projectVersion=1.0
-sonar.sources=./src
+sonar.sources=src
 sonar.language=js
-# sonar.exclusions=**/*_test.js
+sonar.exclusions=**/*_test.js
 sonar.sourceEncoding=UTF-8
-sonar.tests=./src
-sonar.test.inclusions=./src/*_test.js
-sonar.javascript.lcov.reportPaths=./.nyc_coverage/lcov.info
+sonar.tests=src
+sonar.test.inclusions=**/*_test.js
+sonar.javascript.lcov.reportPaths=.nyc_coverage/lcov.info
 sonar.javascript.coveragePlugin=lcov
 # sonar.login=357f3ab60d4a60d366e2a8376f0098f3dad49abb
