--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ coverage
 .nyc_output
 .nyc_coverage
 .scannerwork
+coverage
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
