--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,8 +7,7 @@ sonar.sources=src
 sonar.language=js
 sonar.exclusions=**/*_test.js
 sonar.sourceEncoding=UTF-8
-sonar.tests=src
+sonar.tests=__tests__
 sonar.test.inclusions=**/*_test.js
-sonar.javascript.lcov.reportPaths=.nyc_coverage/lcov.info
-sonar.javascript.coveragePlugin=lcov
-# sonar.login=357f3ab60d4a60d366e2a8376f0098f3dad49abb
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+# sonar.javascript.coveragePlugin=lcov
