--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=ramuspedro_continuos-integration-fullcycle
 sonar.organization=continuos-integration-fullcycle
-sonar.projectName=continuos-integration-fullcycle
+sonar.projectName=Continuos Integration Fullcycle
 # sonar.host.url=https://sonarcloud.io
 # sonar.projectVersion=1.0
 sonar.sources=src
