--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=continuos-integration-fullcycle
 sonar.projectName=Continuos Integration Fullcycle
 # sonar.host.url=https://sonarcloud.io
 # sonar.projectVersion=1.0
-sonar.sources=.
+sonar.sources=src
 # sonar.language=js
 sonar.exclusions=**/*_test.js
 sonar.sourceEncoding=UTF-8
